Se actualiza pom.xml. Agrega dependencia a libreria postgresql.

--- a/died-tp/pom.xml
+++ b/died-tp/pom.xml
@@ -9,4 +9,14 @@
 	  <maven.compiler.target>18</maven.compiler.target>
 	  <maven.compiler.source>18</maven.compiler.source>
   </properties>
+  
+  <dependencies>
+	<!-- https://mvnrepository.com/artifact/org.postgresql/postgresql -->
+	<dependency>
+	    <groupId>org.postgresql</groupId>
+	    <artifactId>postgresql</artifactId>
+	    <version>42.6.0</version>
+	</dependency>
+  </dependencies>
+
 </project>
