--- a/died-tp/pom.xml
+++ b/died-tp/pom.xml
@@ -11,12 +11,30 @@
   </properties>
   
   <dependencies>
+	
 	<!-- https://mvnrepository.com/artifact/org.postgresql/postgresql -->
 	<dependency>
 	    <groupId>org.postgresql</groupId>
 	    <artifactId>postgresql</artifactId>
 	    <version>42.6.0</version>
 	</dependency>
+	
+	<!-- https://mvnrepository.com/artifact/org.jgrapht/jgrapht-core -->
+	<dependency>
+	    <groupId>org.jgrapht</groupId>
+	    <artifactId>jgrapht-core</artifactId>
+	    <version>1.5.2</version>
+	</dependency>
+	
+	<!-- https://mvnrepository.com/artifact/org.jgrapht/jgrapht-ext -->
+	<dependency>
+    	<groupId>org.jgrapht</groupId>
+    	<artifactId>jgrapht-ext</artifactId>
+    	<version>1.5.2</version>
+	</dependency>
+
+	
   </dependencies>
+
 
 </project>
