--- a/died-tp/pom.xml
+++ b/died-tp/pom.xml
@@ -17,6 +17,26 @@
 	    <artifactId>postgresql</artifactId>
 	    <version>42.6.0</version>
 	</dependency>
+	
+<dependency>
+<groupId>org.junit.jupiter</groupId>
+    <artifactId>junit-jupiter-api</artifactId>
+    <version>5.8.2</version>
+</dependency>
+
+<dependency>
+     <groupId>org.junit.jupiter</groupId>
+    <artifactId>junit-jupiter-engine</artifactId>
+    <version>5.8.2</version>
+</dependency>
+
+<dependency>
+    <groupId>org.mockito</groupId>
+    <artifactId>mockito-junit-jupiter</artifactId>
+    <version>4.6.1</version>
+    <scope>test</scope>
+</dependency>	
+	
   </dependencies>
 
 </project>
