--- a/died-tp/.classpath
+++ b/died-tp/.classpath
@@ -36,5 +36,6 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="output" path="target/classes"/>
+	<classpathentry kind="src" path="died-tp/src/main/java"/>
+	<classpathentry kind="output" path="bin"/>
 </classpath>
