--- a/died-tp/pom.xml
+++ b/died-tp/pom.xml
@@ -33,6 +33,25 @@
     	<version>1.5.2</version>
 	</dependency>
 
+	<dependency>
+  	 	<groupId>org.junit.jupiter</groupId>
+    	<artifactId>junit-jupiter-api</artifactId>
+    	<version>5.8.2</version>
+	</dependency>
+
+	<dependency>
+    	 <groupId>org.junit.jupiter</groupId>
+    	<artifactId>junit-jupiter-engine</artifactId>
+    	<version>5.8.2</version>
+	</dependency>
+
+	<dependency>
+    	<groupId>org.mockito</groupId>
+    	<artifactId>mockito-junit-jupiter</artifactId>
+    	<version>4.6.1</version>
+    	<scope>test</scope>
+	</dependency>
+
   </dependencies>
 
 
