--- a/died-tp/pom.xml
+++ b/died-tp/pom.xml
@@ -44,6 +44,13 @@
     	<artifactId>junit-jupiter-engine</artifactId>
     	<version>5.8.2</version>
 	</dependency>
+	
+	<dependency>
+    	<groupId>org.mockito</groupId>
+    	<artifactId>mockito-core</artifactId>
+    	<version>4.6.1</version>
+    	<scope>test</scope>
+	</dependency>
 
 	<dependency>
     	<groupId>org.mockito</groupId>
