--- a/died-tp/pom.xml
+++ b/died-tp/pom.xml
@@ -56,6 +56,13 @@
     	<artifactId>mockito-junit-jupiter</artifactId>
     	<version>4.6.1</version>
 	</dependency>
+	
+	<!-- https://mvnrepository.com/artifact/org.apache.commons/commons-math3 -->
+	<dependency>
+		<groupId>org.apache.commons</groupId>
+		<artifactId>commons-math3</artifactId>
+		<version>3.6.1</version>
+	</dependency>
 
   </dependencies>
 
